    (cmb)
  . Fixed bug #80972 (Memory exhaustion on invalid string offset). (girgias)

- FPM:
  . Fixed bug #65800 (Events port mechanism). (psumbera)

- FTP:
  . Fixed bug #80901 (Info leak in ftp extension). (cmb)
  . Fixed bug #79100 (Wrong FTP error messages). (cmb)

- GD:
  . Fixed bug #81032 (GD install is affected by external libgd installation).
    (Flavio Heleno, cmb)

- MBString:
  . Fixed bug #81011 (mb_convert_encoding removes references from arrays). (cmb)

- ODBC:
  . Fixed bug #80460 (ODBC doesn't account for SQL_NO_TOTAL indicator). (cmb)

- Opcache:
  . Fixed bug #81007 (JIT "not supported" on 32-bit x86 -- build problem?).
    (Nikita)
  . Fixed bug #81015 (Opcache optimization assumes wrong part of ternary
    operator in if-condition). (Nikita)
  . Fixed bug #81046 (Literal compaction merges non-equal related literals).
    (Nikita)

- PDO_MySQL:
  . Fixed bug #81037 (PDO discards error message text from prepared 
    statement). (Kamil Tekiela)

- PDO_ODBC:
  . Fixed bug #44643 (bound parameters ignore explicit type definitions). (cmb)

- PDO_pgsql:
  . Reverted bug fix for #80892 (PDO::PARAM_INT is treated the same as
    PDO::PARAM_STR). (Matteo)

- pgsql:
  . Fixed php_pgsql_fd_cast() wrt. php_stream_can_cast(). (cmb)

- SPL:
  . Fixed bug #80933 (SplFileObject::DROP_NEW_LINE is broken for NUL and CR).
    (cmb, Nikita)

- XMLReader:
  . Fixed bug #73246 (XMLReader: encoding length not checked). (cmb)

- Zip:
  . Fixed bug #80863 (ZipArchive::extractTo() ignores references). (cmb)

06 May 2021, PHP 8.0.6

- PDO_pgsql:
  . Revert "Fixed bug #80892 (PDO::PARAM_INT is treated the same as PDO::PARAM_STR)"
    from PHP 8.0.5.

29 Apr 2021, PHP 8.0.5

- Core:
  . Changed PowerPC CPU registers used by Zend VM to work around GCC bug.
    Old registers (r28/r29) might be clobbered by _restgpr routine used for
    return from C function compiled with -Os. (Dmitry)

- DOM:
  . Fixed bug #66783 (UAF when appending DOMDocument to element). (cmb)
